Changes for 0.9

* focus on action button when battle window is activated (sgb)

* lobby server checks client's computer is network accessble when client hosts a game (sgb)

* fix [ 1611289 ] map scrolling bug (sgb)

* client only waits 10 seconds for connection to servr to be made before aborting (sgb)

Changes for 0.8.6

* fix infantry in classic (sgb)

* make convoy zones stand out better (sgb)

* read output of exec'd lobby games (sgb)

* Saved games in user.home/triplea (not .triplea) for linux and user.home/Documents/triplea for mac (sgb)

* better logic for finding local ip address (sgb)

* fix loby where clients could not find real server address (sgb)

Changes for 0.8.5

* allow neutrals to have different unit types (sgb)

* fix bugs where all bombers in lhtr defend at 2 (sgb)

* update big world map (surtur2)

* alt click/unclick selects 1/10 the type (Nate)

* allow weak ai to move into empty nuetral territories (Nate)

* make dialog clearer for planes can't land (sgb)

* handle marti dice server error messages (sgb,clausewitz)

* allow setting of lobby server lookup url in a file called lobby.properties with a key server in the root triplea directory (sgb)

* fix max select when more than one type of unit present (sgb)

* fix some click to continue to press sapce to continue (sgb)

Changes for 0.8.4

* change click to continue text to press space to continue on battle screens (sgb)

* add an option in battle calculator that at least 1 attacking land unit must survive (sgb)

* fix transport capactity in europe, add connection between adriatic and central med, make saudia arabia nuetral (sgb)

* change network to use nio (sgb)

* fix bug where units originally in a sea zone with a submerged sub that is attacked by another unit cant leave the sea zone (sgb)

* show battle calculator on current territory when pressing ctrl B (sgb)

* ctrl+ and ctrl - zoom in and out (sgb)
