@@ -209,7 +209,7 @@ SZ 30 Baltic Sea  (2011,570)
 Mozambique  (2140,2546)
 Rome  (1701,1539)
 Ethiopia  (2478,2461)
-Saar  (1067,2468)
+Saar (1075,2452)
 SZ 12 Atlantic Ocean  (91,80)
 Montenegro  (1920,1454)
 Ireland  (1147,567)
