@@ -1,9 +1,13 @@
 ANZAC.png  (3540,965)
 Canada.png  (95,1165)
 Japan.png  (3100,580)
-ToEastAfrica2.png  (1480,2479)  (1823,2479)  (1823,2140)
-ToEastAfrica.png  (2260,2479)
-ToSouthAfrica.png  (1923,2479)  (2100,2479)
-ToSudan1.png  (1480,2230)
+ToEastAfrica.png  (2260,2200) 
+ToEastAfrica2.png  (1825,2534)  (1480,2400)
+ToEastAfrica3.png  (1876,2260)
+ToSouthAfrica.png  (2015,2476) 
+ToSouthAfrica2.png  (1960,2460) 
+ToSudan1.png  (1500,2240)
 ToSudan2.png  (1930,2085)  (2085,2085)
-ToWestAfrica.png  (2260,2240)
+ToWestAfrica.png  (2260,2240)  (1940,2400)
+ToMombasa.png   (2540,2540)
+ToSomaliland.png  (2200, 2100)
