@@ -3,9 +3,9 @@ Somme - West (160,2170)
 Somme - East (210,2200)
 Juvigny (500,2300)
 Liege (890,1975)
-Saar (1050,2452)
+Saar (1075,2452)
 Luxembourg (976,2395)
-Lorraine (835,2496)
+Lorraine  (900,2526)
 Chad (1523,2300)
 Anatolia (2247,1610)
 Romania (2160,1330)
@@ -13,3 +13,75 @@ Galicia (2070,1050)
 Croatia-Dalmatia (1780,1300)
 Hungary (1980,1180)
 Carpathia (1965,1086)
+South Africa (1720,2550)
+Bertoua  (1520,2550)
+Port Harcourt  (1250,2250)
+Sudan  (2300,2300)
+British Somaliland  (2625,2565)
+ANZAC  (3548,945)
+Orleans  (1352,1160)
+Trucial Coast  (3000,2090)
+United States  (204,1380)
+Livonia  (2180,570)
+al-Hasa  (2680,1860)
+Smyrna  (2350,1655)
+Alexandria  (2245,1925)
+Cairo  (2338,1920)
+Upper Egypt  (2312,2072)
+Syria  (2564,1740)
+Japan  (3060,602)
+Passchendaele  (230,1991)
+Marseilles  (1395,1320)
+Oman  (3105,2138)
+Arras  (155,2115)
+Karelia  (2377,390)
+Basra  (2775,1820)
+Bar-le-Duc  (708,2527)
+Kigoma  (1985,2190)
+Rhone  (1425,1235)
+Picardy  (70,2300)
+Amiens  (66,2100)
+Burgundy  (215,2518)
+Ruhr  (1580,900)
+Munich  (1715,1116)
+York  (1348,630)
+Alsace  (1169,2460)
+Noyon  (330,2222)
+Arkhangelsk  (2600,231)
+Belgian Congo  (1929,2382)
+East Prussia  (1910,870)
+Meuse River  (750,2257)
+Norway  (1700,460)
+Ypres  (140,2014)
+Escaut River  (439,2100)
+Hanover  (1660,765)
+Sweden  (1865,527)
+Champagne  (550,2379)
+Denmark  (1690,628)
+Saissons  (350,2368)
+Astrakhan  (2757,1120)
+Bavaria  (1725,1040)
+Caucasus  (2740,1365)
+Cologne  (1173,2120)
+Milan  (1580,1245)
+Ukraine  (2310,1157)
+Warsaw  (2077,963)
+Transylvania  (2090,1257)
+Pomerania  (1846,790)
+Bohemia  (1813,1035)
+Netherlands  (1500,845)
+Saxony  (1675,925)
+Wurttemburg  (1545,1105)
+Aquitaine  (1225,1276)
+Scotland  (1326,455)
+Wales  (1240,685)
+Novgorod  (2365,566)
+Piedmont  (1506,1295)
+Nyasaland  (1985,2560)
+Montenegro  (1905,1439)
+Belgrade  (1990,1390)
+Serbia  (2008,1455)
+Bulgaria  (2120,1485)
+Greece  (2020,1560)
+Ireland  (1147,567)
+Windhoek  (1700,2345)
