@@ -99,8 +99,8 @@ Marseilles  (1345,1289)  (1300,1280)  (1397,1295)  (1446,1324)  (1294,1328)  (14
 Burgundy  (173,2495)  (127,2526)  (127,2480)  (219,2464)  (219,2510)  (81,2526)  (81,2480)  (265,2464)  (265,2510)  (35,2526)  (35,2480)  (311,2465)  (311,2511)  (357,2469)  (357,2515)
 Cairo  (2341,1932)  (2300,1932)  (2300,1892)  (2339,1892)
 SZ 51 Ligurian Sea  (1539,1346)  (1509,1373)  (1584,1414)  (1585,1463)  (1496,1445)
-Gibraltar  (892,1582)
-Vienna  (1838,1162)  (1815,1116)  (1857,1083)  (1888,1110)  (1885,1161)  (1857,1126)
+Gibraltar  (892,1592)
+Vienna  (1838,1162)  (1835,1116)  (1857,1083)  (1888,1110)  (1885,1161)  (1857,1126)
 Hungary  (1948,1180)  (1902,1220)  (1978,1134)  (2027,1139)  (1994,1181)  (1860,1213)  (1951,1230)  (1945,1147)
 Sudan  (2354,2222)  (2308,2267)  (2308,2221)  (2399,2268)  (2374,2176)  (2400,2222)  (2339,2313)  (2293,2313)  (2262,2267)  (2262,2221)  (2446,2242)  (2328,2359)  (2282,2359)  (2319,2405)  (2273,2405)  (2260,2498)
 Kazan  (2884,758)  (2838,803)  (2838,757)  (2929,804)  (2884,712)  (2930,712)  (2930,758)  (2836,711)  (2883,849)  (2837,849)  (2792,803)  (2792,757)  (2975,804)  (2975,850)  (2929,850)  (2791,850)  (2882,666)  (2928,666)  (2974,666)  (2976,712)  (2976,758)  (2790,711)  (2790,665)  (2836,665)  (2883,895)  (2837,895)  (2746,804)  (2746,758)  (2996,896)  (2950,896)  (2745,871)  (2882,620)  (2928,620)  (2974,620)  (2764,619)  (2810,619)  (2996,942)  (2950,942)  (2699,855)  (2920,574)  (2966,574)
@@ -209,14 +209,14 @@ SZ 30 Baltic Sea  (1989,547)  (2000,501)  (2011,455)  (2005,409)  (2000,363)  (1
 Mozambique  (2118,2523)  (2072,2526)  (2164,2515)
 Rome  (1690,1558)  (1648,1517)  (1683,1477)  (1727,1504)  (1690,1516)  (1731,1548)  (1658,1556)
 Ethiopia  (2456,2438)  (2410,2483)  (2410,2437)  (2501,2484)  (2456,2392)  (2502,2397)  (2408,2391)  (2455,2529)  (2409,2529)  (2364,2483)  (2363,2529)  (2454,2346)
-Montenegro  (1880,1449)  (1897,1431)
+Montenegro  (1895,1449)  (1897,1431)
 Saar  (1045,2445)  (1063,2399)  (1072,2353)  (1061,2307)  (984,2447)  (1087,2470)
 SZ 12 Atlantic Ocean  (69,57)  (23,102)  (23,56)  (114,103)  (69,11)  (115,11)  (115,57)  (21,10)
 Ireland  (1125,544)  (1079,589)  (1128,590)  (1168,516)  (1099,503)  (1206,487)
 SZ 71 Mozambique Channel  (2216,2532)
 Bavaria  (1691,1011)  (1737,1005)  (1644,992)  (1652,1047)  (1692,980)  (1766,1042)  (1688,1050)  (1744,978)
 SZ 93 Sulu Sea  (3353,1075)  (3307,1120)  (3307,1074)  (3398,1121)  (3353,1029)  (3399,1029)  (3399,1075)  (3305,1028)
-Belgrade  (1962,1388)  (1960,1340)  (1998,1343)  (1996,1383)
+Belgrade  (1970,1378)  (1960,1340)  (1998,1343)  (1996,1378)
 Canada  (87,1116)  (41,1161)  (41,1115)  (132,1162)  (87,1070)  (133,1070)  (133,1116)  (39,1069)  (86,1207)  (40,1207)  (178,1162)  (178,1208)  (132,1208)  (85,1024)  (131,1024)  (177,1024)  (179,1070)  (179,1116)  (4,1023)  (86,1253)  (40,1253)  (198,1254)  (152,1254)
 SZ 64 Sea of Crete  (2181,1733)  (2135,1761)  (2135,1715)  (2227,1728)  (2089,1766)  (2089,1720)  (2273,1729)
 Bertoua  (1529,2456)  (1530,2502)  (1517,2410)  (1497,2524)  (1533,2359)
